--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
-    },
-  "author": "Brian Murithi", 
+  },
+  "author": "Brian Murithi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.11.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
